--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@ djangorestframework>=3.10.3,<3.11.0
 psycopg2>=2.7.5,<2.8.0
 
 flake8>=3.6.0,<3.7.0
+
+ipdb==0.12.2
+
+# Django-Extensions
+django-extensions==2.0.6
